--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:react": "webpack -w"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
